--- a/pages/taches-principales-canada-ca.html
+++ b/pages/taches-principales-canada-ca.html
@@ -140,582 +140,585 @@
 </td></tr>
 <tr>
 <td> 11 </td>
+<td> Voir les données statistiques </td>
+<td> Statistique Canada </td>
+<td> 5 394 895 </td>
+<td> -
+</td></tr>
+<tr>
+<td> 12 </td>
 <td> Obtenir un permis de travail </td>
 <td> Immigration, Réfugiés et Citoyenneté Canada </td>
 <td> 5 366 959 </td>
 <td> 33,2
 </td></tr>
 <tr>
-<td> 12 </td>
+<td> 13 </td>
+<td> Voir les données du recensement </td>
+<td> Statistique Canada </td>
+<td> 4 483 073 </td>
+<td> -
+</td></tr>
+<tr>
+<td>14</td>
 <td> Calculer les retenues sur la paie et déclarer la paie </td>
 <td> Agence du revenu du Canada </td>
 <td> 4 251 501 </td>
 <td> 12,3
 </td></tr>
 <tr>
-<td> 13 </td>
+<td>15</td>
 <td> Examiner les conditions météorologiques passées </td>
 <td> Environnement et Changement climatique Canada </td>
 <td> 4 007 002 </td>
 <td>-</td></tr>
 <tr>
-<td> 14 </td>
+<td>16</td>
 <td> Demander l’assurance-emploi </td>
 <td> Emploi et Développement social Canada </td>
 <td> 4 002 104 </td>
 <td> 36
 </td></tr>
 <tr>
-<td> 15 </td>
+<td>17</td>
 <td> Obtenir des conseils et des avis relatifs aux voyages </td>
 <td> Affaires mondiales Canada; Agence de la santé publique du Canada </td>
 <td> 3 763 497 </td>
 <td> 43
 </td></tr>
 <tr>
-<td> 16 </td>
+<td>18</td>
 <td> Déclarer l’impôt sur le revenu des particuliers </td>
 <td> Agence du revenu du Canada </td>
 <td> 3 581 394 </td>
 <td> 20,7
 </td></tr>
 <tr>
-<td> 17 </td>
+<td>19</td>
 <td> Soumettre une déclaration d’assurance-emploi </td>
 <td> Emploi et Développement social Canada </td>
 <td> 3 177 772 </td>
 <td> 47,9
 </td></tr>
 <tr>
-<td> 18 </td>
+<td>20</td>
 <td> Obtenir un permis d’études </td>
 <td> Immigration, Réfugiés et Citoyenneté Canada </td>
 <td> 2 937 603 </td>
 <td> 27,3
 </td></tr>
 <tr>
-<td> 19 </td>
+<td>21</td>
 <td> Consulter les délais d’attente estimatifs à la frontière Canada-États-Unis </td>
 <td> Agence des services frontaliers du Canada </td>
 <td> 2 889 460 </td>
 <td> 81
 </td></tr>
 <tr>
-<td> 20 </td>
+<td>22</td>
 <td> Connaître ce que l’on peut apporter au Canada </td>
 <td> Agence des services frontaliers du Canada </td>
 <td> 2 777 219 </td>
 <td>-</td></tr>
 <tr>
-<td> 21 </td>
+<td>23</td>
 <td> Se joindre aux Forces armées canadiennes </td>
 <td> Défense nationale </td>
 <td> 2 683 703 </td>
 <td>34</td></tr>
 <tr>
-<td> 22 </td>
+<td>24</td>
 <td> Obtenir des renseignements au sujet de maladies </td>
 <td> Agence de la santé publique du Canada </td>
 <td> 2 400 000 </td>
 <td> 40,2
 </td></tr>
 <tr>
-<td> 23 </td>
+<td>25</td>
 <td> Obtenir les données sur les niveaux d’eau </td>
 <td> Environnement et Changement climatique Canada </td>
 <td> 2 378 232 </td>
 <td>-</td></tr>
 <tr>
-<td> 24 </td>
+<td>26</td>
+<td> Connaître la façon dont le gouvernement mène des sondages et recueille des statistiques </td>
+<td> Statistique Canada </td>
+<td> 1 995 838 </td>
+<td>-</td></tr>
+<tr>
+<td>27</td>
 <td> Se préparer à l’examen pour la citoyenneté </td>
 <td> Immigration, Réfugiés et Citoyenneté Canada </td>
 <td> 1 990 660 </td>
 <td> 35
 </td></tr>
 <tr>
-<td> 25 </td>
+<td>28</td>
 <td> Vérifier les taux d’imposition du revenu </td>
 <td> Agence du revenu du Canada </td>
 <td> 1 976 747 </td>
 <td> 34,9
 </td></tr>
 <tr>
-<td> 26 </td>
+<td>29</td>
 <td> Trouver des renseignements au sujet d’une entreprise </td>
 <td> Innovation, Sciences et Développement économique Canada </td>
 <td> 1 881 200 </td>
 <td>8,8</td></tr>
 <tr>
-<td> 27 </td>
+<td>30</td>
 <td> Demander la citoyenneté canadienne </td>
 <td> Immigration, Réfugiés et Citoyenneté Canada </td>
 <td> 1 785 345 </td>
 <td> 35
 </td></tr>
 <tr>
-<td> 28 </td>
+<td>31</td>
 <td> Parrainer un membre de sa famille pour immigrer au Canada </td>
 <td> Immigration, Réfugiés et Citoyenneté Canada </td>
 <td> 1 709 371 </td>
 <td> 22,7
 </td></tr>
 <tr>
-<td> 29 </td>
+<td>32</td>
 <td> Obtenir les taux de rémunération des fonctionnaires et des militaires </td>
 <td> Défense nationale&#160;; Secrétariat du Conseil du Trésor du Canada </td>
 <td> 1 543 014 </td>
 <td> 34
 </td></tr>
 <tr>
-<td> 30 </td>
+<td>33</td>
 <td> Gérer et déclarer les marchandises importées </td>
 <td> Agence des services frontaliers du Canada </td>
 <td> 1 537 651 </td>
 <td>-</td></tr>
 <tr>
-<td> 31 </td>
+<td>34</td>
 <td> Apprendre à rédiger une lettre de consentement pour les enfants voyageant à l’étranger </td>
 <td> Affaires mondiales Canada </td>
 <td> 1 486 725 </td>
 <td> 32
 </td></tr>
 <tr>
-<td> 32 </td>
+<td>35</td>
 <td> S’inscrire pour voyager et travailler au Canada en tant que jeune (Programme Expérience internationale Canada) </td>
 <td> Immigration, Réfugiés et Citoyenneté Canada </td>
 <td> 1 394 103 </td>
 <td> 32,9
 </td></tr>
 <tr>
-<td> 33 </td>
+<td>36</td>
 <td> Trouver les conditions actuelles des ouragans </td>
 <td> Environnement et Changement climatique Canada </td>
 <td> 1 375 108 </td>
 <td>-</td></tr>
 <tr>
-<td> 34 </td>
+<td>37</td>
 <td> Produire une déclaration de TPS/TVH </td>
 <td> Agence du revenu du Canada </td>
 <td> 1 363 908 </td>
 <td> 2,7
 </td></tr>
 <tr>
-<td> 35 </td>
+<td>38</td>
 <td> Remplacer une carte de résident permanent </td>
 <td> Immigration, Réfugiés et Citoyenneté Canada </td>
 <td> 1 289 500 </td>
 <td> 28,4
 </td></tr>
 <tr>
-<td> 36 </td>
+<td>39</td>
 <td> Faire une demande d’immigration au Canada par l’Entrée express </td>
 <td> Immigration, Réfugiés et Citoyenneté Canada </td>
 <td> 1 240 454 </td>
 <td> 33,5
 </td></tr>
 <tr>
-<td> 37 </td>
+<td>40</td>
 <td> Vérifier les versements prévus pour le soutien d’un enfant </td>
 <td> Justice Canada, Ministère de la </td>
 <td> 1 014 237 </td>
 <td>-</td></tr>
 <tr>
-<td> 38 </td>
+<td>41</td>
 <td> Obtenir les lignes directrices en matière de pratiques d’immunisation et de vaccination </td>
 <td> Agence de la santé publique du Canada </td>
 <td> 1 000 002 </td>
 <td> 21,4
 </td></tr>
 <tr>
-<td> 39 </td>
+<td>42</td>
 <td> Trouver les caractéristiques de pathogènes </td>
 <td> Agence de la santé publique du Canada </td>
 <td> 1 000 001 </td>
 <td>-</td></tr>
 <tr>
-<td> 40 </td>
+<td>43</td>
 <td> Vérifier si un conseil de santé est en vigueur pour un pays </td>
 <td> Agence de la santé publique du Canada </td>
 <td> 1 000 000 </td>
 <td>-</td></tr>
 <tr>
-<td> 41 </td>
+<td>44</td>
 <td> Obtenir un numéro de TPS/TVH </td>
 <td> Agence du revenu du Canada </td>
 <td> 874 220 </td>
 <td> 19,4
 </td></tr>
 <tr>
-<td> 42 </td>
+<td>45</td>
 <td> Vérifier un terme ou une directive grammaticale </td>
 <td> Services publics et Approvisionnement Canada </td>
 <td> 822 799 </td>
 <td> 15
 </td></tr>
 <tr>
-<td> 43 </td>
+<td>46</td>
 <td> Rechercher une espèce en péril </td>
 <td> Environnement et Changement climatique Canada </td>
 <td> 800 995 </td>
 <td>-</td></tr>
 <tr>
-<td> 44 </td>
+<td>47</td>
 <td> Produire une déclaration annuelle de société </td>
 <td> Innovation, Sciences et Développement économique Canada </td>
 <td> 793 946 </td>
 <td>4,5</td></tr>
 <tr>
-<td> 45 </td>
+<td>48</td>
 <td> Obtenir une copie de mon avis de cotisation aux fins de l’impôt </td>
 <td> Agence du revenu du Canada </td>
 <td> 776 566 </td>
 <td> 28,7
 </td></tr>
 <tr>
-<td> 46 </td>
+<td>49</td>
 <td> Consulter les conventions collectives de la fonction publique </td>
 <td> Secrétariat du Conseil du Trésor du Canada </td>
 <td> 771 348 </td>
 <td>-</td></tr>
 <tr>
-<td> 47 </td>
+<td>50</td>
 <td> S’inscrire à NEXUS </td>
 <td> Agence des services frontaliers du Canada </td>
 <td> 758 278 </td>
 <td>-</td></tr>
 <tr>
-<td> 48 </td>
+<td>51</td>
 <td> S’inscrire pour les voyages à l’étranger </td>
 <td> Affaires mondiales Canada </td>
 <td> 670 964 </td>
 <td> 33
 </td></tr>
 <tr>
-<td> 49 </td>
+<td>52</td>
 <td> Déterminer ce que les résidents doivent faire lorsqu’ils reviennent au Canada </td>
 <td> Agence des services frontaliers du Canada </td>
 <td> 656 004 </td>
 <td>-</td></tr>
 <tr>
-<td> 50 </td>
+<td>53</td>
 <td> Trouver un parc national </td>
 <td> Parcs Canada </td>
 <td> 648 759 </td>
 <td>-</td></tr>
 <tr>
-<td> 51 </td>
+<td>54</td>
 <td> Consulter les lois et les règlements </td>
 <td> Justice Canada, Ministère de la </td>
 <td> 626 967 </td>
 <td>-</td></tr>
 <tr>
-<td> 52 </td>
+<td>55</td>
 <td> Obtenir une vérification du casier judiciaire </td>
 <td> Gendarmerie royale du Canada </td>
 <td> 619 810 </td>
 <td>-</td></tr>
 <tr>
-<td> 53 </td>
+<td>56</td>
 <td> Consulter la liste des personnes recherchées par la Gendarmerie royale du Canada (GRC) </td>
 <td> Gendarmerie royale du Canada </td>
 <td> 580 250 </td>
 <td>-</td></tr>
 <tr>
-<td> 54 </td>
+<td>57</td>
 <td> Examiner les tarifs des douanes pour importer des marchandises </td>
 <td> Agence des services frontaliers du Canada </td>
 <td> 616 656 </td>
 <td>-</td></tr>
 <tr>
-<td> 55 </td>
+<td>58</td>
 <td> Demander des déductions et des crédits d’impôt </td>
 <td> Agence du revenu du Canada </td>
 <td> 604 993 </td>
 <td>-</td></tr>
 <tr>
-<td> 56 </td>
+<td>59</td>
 <td> Apprendre au sujet des matières dangereuses utilisées au travail </td>
 <td> Santé Canada </td>
 <td> 600 001 </td>
 <td>-</td></tr>
 <tr>
-<td> 57 </td>
+<td>60</td>
 <td> Déterminer si l’utilisation d’un médicament est approuvée au Canada </td>
 <td> Santé Canada </td>
 <td> 600 000 </td>
 <td>-</td></tr>
 <tr>
-<td> 58 </td>
+<td>61</td>
 <td> Découvrir si une marque de commerce est enregistrée </td>
 <td> Innovation, Sciences et Développement économique Canada </td>
 <td> 587 281 </td>
 <td>7,2</td></tr>
 <tr>
-<td> 59 </td>
+<td>62</td>
 <td> Afficher un relevé d’emploi </td>
 <td> Emploi et Développement social Canada </td>
 <td> 562 365 </td>
 <td>-</td></tr>
 <tr>
-<td> 60 </td>
+<td>63</td>
 <td> Trouver un dossier de faillite et d’insolvabilité </td>
 <td> Innovation, Sciences et Développement économique Canada </td>
 <td> 526 085 </td>
 <td>1.9</td></tr>
 <tr>
-<td> 61 </td>
+<td>64</td>
 <td> Trouver un producteur autorisé de marijuana à des fins médicales </td>
 <td> Santé Canada </td>
 <td> 500 000 </td>
 <td>-</td></tr>
 <tr>
-<td> 62 </td>
+<td>65</td>
 <td> Apprendre ce qui ne peut pas être apporté sur un avion </td>
 <td> Affaires mondiales Canada and Transports Canada </td>
 <td> 486 042 </td>
 <td> 59
 </td></tr>
 <tr>
-<td> 63 </td>
+<td>66</td>
 <td> Demander un permis d’armes à feu </td>
 <td> Gendarmerie royale du Canada </td>
 <td> 482 404 </td>
 <td>-</td></tr>
 <tr>
-<td> 64 </td>
+<td>67</td>
 <td> S’inscrire au Régime de pensions du Canada (RPC) </td>
 <td> Emploi et Développement social Canada </td>
 <td> 444 550 </td>
 <td>-</td></tr>
 <tr>
-<td> 65 </td>
+<td>68</td>
 <td> Consulter le budget fédéral </td>
 <td> Finances Canada, Ministère des </td>
 <td> 413065 </td>
 <td> 21,4
 </td></tr>
 <tr>
-<td> 66 </td>
+<td>69</td>
 <td> Apprendre au sujet de l’abus d’alcool ou d’autres drogues </td>
 <td> Santé Canada </td>
 <td> 400 001 </td>
 <td>-</td></tr>
 <tr>
-<td> 67 </td>
+<td>70</td>
 <td> Apprendre au sujet de la préparation et de l’entreposage sécuritaires des aliments </td>
 <td> Santé Canada </td>
 <td> 400 000 </td>
 <td>-</td></tr>
 <tr>
-<td> 68 </td>
+<td>71</td>
 <td> Rechercher les Canadiens morts en raison de la guerre </td>
 <td> Anciens Combattants Canada </td>
 <td> 378 191 </td>
 <td>-</td></tr>
 <tr>
-<td> 69 </td>
+<td>72</td>
 <td> Voir les criminels les plus recherchés en vertu de la Loi sur l’immigration et la protection des réfugiés </td>
 <td> Agence des services frontaliers du Canada </td>
 <td> 327 361 </td>
 <td>-</td></tr>
 <tr>
-<td> 70 </td>
+<td>73</td>
 <td> Trouver sa limite de contribution aux régimes enregistrés d’épargne-retraite (REER) </td>
 <td> Agence du revenu du Canada </td>
 <td> 325 281 </td>
 <td> 19,5
 </td></tr>
 <tr>
-<td> 71 </td>
+<td>74</td>
 <td> Comment importer des marchandises au Canada et en exporter du Canada </td>
 <td> Agence des services frontaliers du Canada </td>
 <td> 319 721 </td>
 <td>-</td></tr>
 <tr>
-<td> 72 </td>
+<td>75</td>
 <td> Apprendre au sujet des symboles officiels du Canada </td>
 <td> Patrimoine canadien </td>
 <td> 295 926 </td>
 <td>-</td></tr>
 <tr>
-<td> 73 </td>
+<td>76</td>
 <td> S’inscrire à la Sécurité de la vieillesse </td>
 <td> Emploi et Développement social Canada </td>
 <td> 293 730 </td>
 <td>-</td></tr>
 <tr>
-<td> 74 </td>
+<td>77</td>
 <td> Déterminer s’il faut un visa pour voyager vers un pays </td>
 <td> Affaires mondiales Canada </td>
 <td> 279 258 </td>
 <td> 33
 </td></tr>
 <tr>
-<td> 75 </td>
+<td>78</td>
 <td> Consulter les journaux scientifiques, techniques et médicaux </td>
 <td> Conseil national de recherches Canada </td>
 <td> 277579 </td>
 <td>-</td></tr>
 <tr>
-<td> 76 </td>
+<td>79</td>
 <td> Voir les règles pour une utilisation sécuritaire et légale des drones </td>
 <td> Transports Canada </td>
 <td> 276 617 </td>
 <td>-</td></tr>
 <tr>
-<td> 77 </td>
+<td>80</td>
 <td> Demander de venir au Canada en tant que réfugié </td>
 <td> Immigration, Réfugiés et Citoyenneté Canada </td>
 <td> 264 512 </td>
 <td>-</td></tr>
 <tr>
-<td> 78 </td>
+<td>81</td>
 <td> Demander les prestations de congé de maternité ou parental </td>
 <td> Emploi et Développement social Canada </td>
 <td> 262 069 </td>
 <td>-</td></tr>
 <tr>
-<td> 79 </td>
+<td>82</td>
 <td> Enregistrer une marquer de commerce </td>
 <td> Innovation, Sciences et Développement économique Canada </td>
 <td> 260 189 </td>
 <td>7,2</td></tr>
 <tr>
-<td> 80 </td>
+<td>83</td>
 <td> Parrainer l’arrivée d’un réfugié au Canada </td>
 <td> Immigration, Réfugiés et Citoyenneté Canada </td>
 <td> 259 795 </td>
 <td>-</td></tr>
 <tr>
-<td> 81 </td>
+<td>84</td>
 <td> Trouver les médicaments qui sont couverts par le programme de Services de santé non assurés </td>
 <td> Santé Canada </td>
 <td> 250 000 </td>
 <td>-</td></tr>
 <tr>
-<td> 82 </td>
+<td>85</td>
 <td> Rechercher son histoire familiale </td>
 <td> Bibliothèque et Archives Canada </td>
 <td> 245964 </td>
 <td>-</td></tr>
 <tr>
-<td> 83 </td>
+<td>86</td>
 <td> Demander le statut d’indien </td>
 <td> Affaires autochtones et du Nord Canada </td>
 <td> 242 928 </td>
 <td>-</td></tr>
 <tr>
-<td> 84 </td>
+<td>87</td>
 <td> Consulter un recensement canadien (d’avant 1921) </td>
 <td> Bibliothèque et Archives Canada </td>
 <td> 240522 </td>
 <td>-</td></tr>
 <tr>
-<td> 85 </td>
+<td>88</td>
 <td> Demander ou renouveler un permis de conducteur d’embarcation de plaisance (navigation de plaisance) </td>
 <td> Transports Canada </td>
 <td> 238 137 </td>
 <td>-</td></tr>
 <tr>
-<td> 86 </td>
+<td>89</td>
 <td> Apprendre comment embaucher un travailleur étranger </td>
 <td> Immigration, Réfugiés et Citoyenneté Canada </td>
 <td> 237 447 </td>
 <td>-</td></tr>
 <tr>
-<td> 87 </td>
+<td>90</td>
 <td> Déterminer sa limite de cotisation à un compte d’épargne libre d’impôt (CELI) </td>
 <td> Agence du revenu du Canada </td>
 <td> 235 384 </td>
 <td> 22,7
 </td></tr>
 <tr>
-<td> 88 </td>
+<td>91</td>
 <td> Demander les prestations de maladie de l’assurance-emploi </td>
 <td> Emploi et Développement social Canada </td>
 <td> 232 227 </td>
 <td>-</td></tr>
 <tr>
-<td> 89 </td>
+<td>92</td>
 <td> Trouver les demandes d’approvisionnement de produits ou de services au gouvernement (appels d’offres) </td>
 <td> Services publics et Approvisionnement Canada </td>
 <td> 231696 </td>
 <td> 10
 </td></tr>
 <tr>
-<td> 90 </td>
+<td>93</td>
 <td> Déclarer une faillite commerciale </td>
 <td> Innovation, Sciences et Développement économique Canada </td>
 <td> 224 020 </td>
 <td>-</td></tr>
 <tr>
-<td> 91 </td>
+<td>94</td>
 <td> Voir les zones de danger et les prévisions de feux de végétation </td>
 <td> Ressources naturelles Canada </td>
 <td> 217386 </td>
 <td>-</td></tr>
 <tr>
-<td> 92 </td>
+<td>95</td>
 <td> Apprendre au sujet des Premières Nations au Canada </td>
 <td> Affaires autochtones et du Nord Canada </td>
 <td> 213 292 </td>
 <td>-</td></tr>
 <tr>
-<td> 93 </td>
+<td>96</td>
 <td> Joindre les cadets </td>
 <td> Défense nationale </td>
 <td> 202 394 </td>
 <td>53</td></tr>
 <tr>
-<td> 94 </td>
+<td>97</td>
 <td> Apprendre au sujet de la participation du Canada aux première et deuxième guerres mondiales </td>
 <td> Anciens Combattants Canada </td>
 <td> 201 531 </td>
 <td>-</td></tr>
 <tr>
-<td> 95 </td>
+<td>98</td>
 <td> Authentifier un document officiel </td>
 <td> Affaires mondiales Canada </td>
 <td> 193 986 </td>
 <td> 32,4
 </td></tr>
 <tr>
-<td> 96 </td>
+<td>99</td>
 <td> Apprendre à installer et utiliser les sièges d’auto et les sièges rehausseurs </td>
 <td> Transports Canada </td>
 <td> 190 212 </td>
 <td>-</td></tr>
 <tr>
-<td> 97 </td>
+<td>100</td>
 <td> Voir l’état des négociations de conventions fiscales avec d’autres pays </td>
 <td> Finances Canada, Ministère des </td>
 <td> 186 187 </td>
 <td>-</td></tr>
-<tr>
-<td> 98 </td>
-<td> Apprendre au sujet des études payées par les Forces armées </td>
-<td> Défense nationale </td>
-<td> 178 530 </td>
-<td>31</td></tr>
-<tr>
-<td> 99 </td>
-<td> Apprendre la date d’expiration des sièges d’auto et rehausseurs </td>
-<td> Transports Canada </td>
-<td> 172 178 </td>
-<td>-</td></tr>
-<tr>
-<td> 100 </td>
-<td> Examiner les règlements et les politiques militaires </td>
-<td> Défense nationale </td>
-<td> 168 096 </td>
-<td>4,5</td></tr></tbody></table>
+</tbody></table>
 <div id="def-preFooter">
 </div>
 <!-- Write closure template -->
 <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
 	defPreFooter.outerHTML = wet.builder.preFooter({
-		dateModified: "2017-10-12",
+		dateModified: "2017-11-23",
 		showPostContent: true,
 		showFeedback: true,
 		showShare: true
