--- a/pages/top-task-list-canada-ca.html
+++ b/pages/top-task-list-canada-ca.html
@@ -55,6 +55,16 @@
 <main role="main" property="mainContentOfPage" class="container">
 <h1>Top tasks for Canada.ca</h1>
 
+	<p>People come to our digital channels to get specific things done. This inventory includes the 100 most in-demand tasks across the Government of Canada – we are working to improve the information and services supporting these top tasks so that people can more successfully find and complete them.</p>
+ 
+	<p>For details on how this inventory was created, see:</p>
+ 
+<ul>
+	<li>How we identify top tasks for Canada.ca</li>
+</ul>	
+
+
+		
  <table class="wb-tables table table-striped" data-wb-tables="{ &quot;paging&quot;: false }"> 
 <thead>
 <tr>
