--- a/pages/taches-principales-canada-ca.html
+++ b/pages/taches-principales-canada-ca.html
@@ -55,6 +55,14 @@
 <main role="main" property="mainContentOfPage" class="container">
 
 <h1>Tâches principales pour Canada.ca</h1>
+	
+	<p>Les gens utilisent nos voies numériques pour accomplir des choses bien précises. Ce répertoire dresse la liste des 100 tâches les plus fréquemment exécutées au gouvernement du Canada – nous travaillons en vue d’améliorer l’information et les services à l’appui de ces tâches, afin que les gens puissent les repérer et les exécuter plus facilement.</>
+
+	<p>Pour obtenir de l’information au sujet de la création de ce répertoire, consultez :</p>
+<ul>
+	<li>Notre approche pour identifier les principales tâches de Canada.ca</li>
+</ul>
+
 
  <table class="wb-tables table table-striped" data-wb-tables="{ &quot;paging&quot;: false }"> 
  <thead>
