adding h2 to introduce the table

--- a/pages/top-task-list-canada-ca.html
+++ b/pages/top-task-list-canada-ca.html
@@ -63,7 +63,7 @@
 	<li>How we identify top tasks for Canada.ca</li>
 </ul>	
 
-
+<h2>Government of Canada 100 Top Tasks Inventory</h2>
 		
  <table class="wb-tables table table-striped" data-wb-tables="{ &quot;paging&quot;: false }"> 
 <thead>
