--- a/pages/taches-principales-canada-ca.html
+++ b/pages/taches-principales-canada-ca.html
@@ -63,7 +63,8 @@
 	<li>Notre approche pour identifier les principales tâches de Canada.ca</li>
 </ul>
 
-
+<h2>Inventaire du Gouvernement du Canada 100 tâches principales</h2>
+		
  <table class="wb-tables table table-striped" data-wb-tables="{ &quot;paging&quot;: false }"> 
  <thead>
 <tr>
