Better link to Home in breadcrumb

--- a/pages/taches-principales-canada-ca.html
+++ b/pages/taches-principales-canada-ca.html
@@ -8,8 +8,8 @@
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
-		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_25/cdts/compiled/soyutils.js"></script>
-		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_25/cdts/compiled/wet-fr.js"></script>
+		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/cdts/compiled/soyutils.js"></script>
+		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/cdts/compiled/wet-fr.js"></script>
 
 		<!-- Write closure template -->
 		<script type="text/javascript">
@@ -42,7 +42,7 @@
 				}],
 				breadcrumbs: [{
 					title: "Accueil",
-					href: "https://www.canada.ca/accueil.html"
+					href: "https://www.canada.ca/fr.html"
 				},{
 					title: "Au sujet de Canada.ca",
 					href: "https://www.canada.ca/fr/gouvernement/a-propos.html"
