--- a/pages/top-task-list-canada-ca.html
+++ b/pages/top-task-list-canada-ca.html
@@ -42,7 +42,7 @@
 				}],
 				breadcrumbs: [{
 					title: "Home",
-					href: "https://www.canada.ca/home.html"
+					href: "https://www.canada.ca/en.html"
 				},{
 					title: "About Canada.ca",
 					href: "https://www.canada.ca/en/government/about.html"
