--- a/pages/Gerry-2018-AuthorizationandRelease.html
+++ b/pages/Gerry-2018-AuthorizationandRelease.html
@@ -44,6 +44,6 @@ I have read and fully understood the terms and legal effects of this agreement.
 	<p>Notice:
 Personal information, as defined in section 3 of the Privacy Act, R.S.C. 1985, c.P-21, is subject to the provisions of the Privacy Act and the Access to Information Act, R.S.C. 1985, c.A-1. The information will be stored in Personal Information Bank (PIB) TBS PSU 914.
 </p>
-<p><a href="">Return to registration page</a></p>
+<p><a href="http://ca.surveygizmo.com/s3/50017698/Gerry-McGovern-Masterclass-invitation">Return to registration page</a></p>
 </body>
 </html>
