--- a/pages/Gerry-2018-autorisationetrenonciation.html
+++ b/pages/Gerry-2018-autorisationetrenonciation.html
@@ -35,7 +35,7 @@
 		<!-- Write closure template -->
 		<main role="main" property="mainContentOfPage" class="container">
 <h1>Autorisation et renonciation</h1>
-<h2>Evénement : Seminaire publique – Top Tasks: Delivering a Great Customer Experience, Ottawa</h2>
+<h2>&Eacute;vénement : Seminaire publique – Top Tasks: Delivering a Great Customer Experience, Ottawa</h2>
 	<p>
  Moi j’accorde à Sa Majesté la Reine du Canada, qui est représentée par le président du Secrétariat du Conseil du Trésor du Canada (SCT), le droit d’utiliser, de modifier, d’adapter, d’exposer, de publier, de transmettre, de reproduire et de créer des oeuvres dérivées à partir de photographies, de bandes vidéo et/ou audio, de ressemblances, tout ouvrage, les oeuvres d’art, mon profil et/ou mon témoignage dans du matériel élaboré par le SCT ou en son nom, d’en faire la distribution ou d’utiliser mon nom, ce qui comprend, mais sans s’y limiter, des publications actuelles et futures, les sites Web, des enregistrements vidéo et/ou audio visant à promulguer et à appuyer la mission du SCT pour utilisation interne ou diffusion publique.
 Je décharge à vie le SCT de toute responsabilité de dommages-intérêts directs, indirects, spéciaux, fortuits ou consécutifs découlant de l’utilisation de mon nom, de mes photographies, d’enregistrements vidéo et/ou audio, de ressemblances, d’oeuvres d’art, de mon profil et/ou de mon témoignage.
