--- a/pages/Gerry-2018-autorisationetrenonciation.html
+++ b/pages/Gerry-2018-autorisationetrenonciation.html
@@ -45,6 +45,6 @@ J’ai lu et je comprends entièrement la terminologie et les effets juridiques 
 	<p>Avis :
 Les renseignements personnels, tels que définis à l’article 3 de la Loi sur la protection des renseignements personnels, L.R.C. 1985, ch. P-21, sont assujettis aux dispositions de la Loi sur la protection des renseignements personnels et de la Loi sur l’accès à l’information, L.R.C. 1985, ch. A-1. Les renseignements seront stockés dans le fichier de renseignements personnels (FRP) SCT PSU 914.
 </p>
-<p><a href="http://ca.surveygizmo.com/s3/50017698/Gerry-McGovern-Masterclass-invitation?snc=1516203398_5a5f6d8697e5b2.78537225&sg_navigate=start&sglocale=fr-ca ">Retour à la page d'inscription</a></p>
+<p><a href="http://ca.surveygizmo.com/s3/50017698/GerryMasterclassFR ">Retour à la page d'inscription</a></p>
 </body>
 </html>
