--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ lang: en
 
 <div class="home">
 
-  <h1 class="page-heading">Newest Articles</h1>
+  <h1 class="page-heading">Newest articles</h1>
 
   
   {% assign posts=site.posts | where:"lang", page.lang %}
