--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ lang: en
 
   <h1 class="page-heading">Newest articles</h1>
 
-  
+   <div class="wb-eqht"> 
   {% assign posts=site.posts | where:"lang", page.lang %}
     {% for post in posts %}
 <section class="col-md-6">
@@ -21,7 +21,7 @@ lang: en
 
   {% endfor %}
   
-  
+	</div>
 
 <div class="row">
 <div class="col-sm-8">
