--- a/images/gerry-decks/text.html
+++ b/images/gerry-decks/text.html
@@ -1,15 +1,15 @@
-Improve customer experience with top tasks
-Gerry McGovern masterclass
-February 13, 2018
-Bayview Yards
-Organized by the Digital Transformation Office at TBS.
-
-Presentation materials
-
-Part 1 - https://canada-ca.github.io/images/gerry-decks/Feb 13 Intro Masterclass Part 1 Canada 2018 Gerry McGovern.pptx
-Part 2 - https://canada-ca.github.io/images/gerry-decks/Feb 13 Intro Masterclass Part 2 Canada 2018 Gerry McGovern.pptx
-Part 3 - https://canada-ca.github.io/images/gerry-decks/Feb 13 Intro Masterclass Part 3 Canada 2018 Gerry McGovern.pptx
-Survey results - https://canada-ca.github.io/images/gerry-decks/Feb 13 Intro Masterclass Survey Results Canada 2018 Gerry McGovern.pptx
-
-Enjoy!
+Improve customer experience with top tasks<br>
+Gerry McGovern masterclass<br>
+February 13, 2018<br>
+Bayview Yards<br>
+Organized by the Digital Transformation Office at TBS.<br>
+<br>
+Presentation materials<br>
+<br>
+Part 1 - https://canada-ca.github.io/images/gerry-decks/Feb 13 Intro Masterclass Part 1 Canada 2018 Gerry McGovern.pptx<br>
+Part 2 - https://canada-ca.github.io/images/gerry-decks/Feb 13 Intro Masterclass Part 2 Canada 2018 Gerry McGovern.pptx<br>
+Part 3 - https://canada-ca.github.io/images/gerry-decks/Feb 13 Intro Masterclass Part 3 Canada 2018 Gerry McGovern.pptx<br>
+Survey results - https://canada-ca.github.io/images/gerry-decks/Feb 13 Intro Masterclass Survey Results Canada 2018 Gerry McGovern.pptx<br>
+<br>
+Enjoy!<br>
 
