--- a/images/gerry-decks/text.html
+++ b/images/gerry-decks/text.html
@@ -6,10 +6,10 @@ Organized by the Digital Transformation Office at TBS.<br>
 <br>
 Presentation materials<br>
 <br>
-Part 1 - https://canada-ca.github.io/images/gerry-decks/Feb 13 Intro Masterclass Part 1 Canada 2018 Gerry McGovern.pptx<br>
-Part 2 - https://canada-ca.github.io/images/gerry-decks/Feb 13 Intro Masterclass Part 2 Canada 2018 Gerry McGovern.pptx<br>
-Part 3 - https://canada-ca.github.io/images/gerry-decks/Feb 13 Intro Masterclass Part 3 Canada 2018 Gerry McGovern.pptx<br>
-Survey results - https://canada-ca.github.io/images/gerry-decks/Feb 13 Intro Masterclass Survey Results Canada 2018 Gerry McGovern.pptx<br>
+<a href="https://canada-ca.github.io/images/gerry-decks/Feb 13 Intro Masterclass Part 1 Canada 2018 Gerry McGovern.pptx">Part 1 - morning session</a> (PowerPoint, 18.5 MB)<br>
+<a href="https://canada-ca.github.io/images/gerry-decks/Feb 13 Intro Masterclass Part 2 Canada 2018 Gerry McGovern.pptx">Part 2 - morning session</a> (PowerPoint, 1.99 MB)<br>
+<a href="https://canada-ca.github.io/images/gerry-decks/Feb 13 Intro Masterclass Part 3 Canada 2018 Gerry McGovern.pptx">Part 3 - afternoon session</a> (PowerPoint, 16.4 MB)<br>
+<a href="https://canada-ca.github.io/images/gerry-decks/Feb 13 Intro Masterclass Survey Results Canada 2018 Gerry McGovern.pptx">Audience Survey - results</a> (PowerPoint, 525 KB)<br>
 <br>
 Enjoy!<br>
 
