--- a/images/gerry-decks/text.html
+++ b/images/gerry-decks/text.html
@@ -1,10 +1,10 @@
-Improve customer experience with top tasks<br>
-Gerry McGovern masterclass<br>
-February 13, 2018<br>
+Improve customer experience with top tasks / Améliorer l’expérience du client avec les tâches principales<br>
+Gerry McGovern masterclass / Atelier de maître de Gerry McGovern<br>
+February 13, 2018 / Le 13 février 2018<br>
 Bayview Yards<br>
-Organized by the Digital Transformation Office at TBS.<br>
+Organized by the Digital Transformation Office, Treasury Board of Canada Secretariat / Organisé par le Bureau de la transformation numérique du Secrétariat du Conseil du Trésor du Canada<br>
 <br>
-Presentation materials<br>
+Presentation materials - English<br>
 <br>
 <a href="https://canada-ca.github.io/images/gerry-decks/Feb 13 Intro Masterclass Part 1 Canada 2018 Gerry McGovern.pptx">Part 1 - morning session</a> (PowerPoint, 18.5 MB)<br>
 <a href="https://canada-ca.github.io/images/gerry-decks/Feb 13 Intro Masterclass Part 2 Canada 2018 Gerry McGovern.pptx">Part 2 - morning session</a> (PowerPoint, 1.99 MB)<br>
@@ -12,4 +12,12 @@ Presentation materials<br>
 <a href="https://canada-ca.github.io/images/gerry-decks/Feb 13 Intro Masterclass Survey Results Canada 2018 Gerry McGovern.pptx">Audience Survey - results</a> (PowerPoint, 525 KB)<br>
 <br>
 Enjoy!<br>
-
+<br>
+Diapositives de l<exposé - Français<br>
+<br>
+<a href="https://canada-ca.github.io/images/gerry-decks/ ">Partie 1 - session matinale</a> (PowerPoint, 18.5 MB)<br>
+<a href="https://canada-ca.github.io/images/gerry-decks/ ">Partie 2 - session matinale</a> (PowerPoint, 1.99 MB)<br>
+<a href="https://canada-ca.github.io/images/gerry-decks/ ">Partie 3 - session de l<après-midi</a> (PowerPoint, 16.4 MB)<br>
+<a href="https://canada-ca.github.io/images/gerry-decks/ ">Sondage des participants - résultats</a> (PowerPoint, 525 KB)<br>
+<br>
+Bonne lecture!<br>
