--- a/images/gerry-decks/text.html
+++ b/images/gerry-decks/text.html
@@ -15,9 +15,9 @@ Enjoy!<br>
 <br>
 Diapositives de l<exposé - Français<br>
 <br>
-<a href="https://canada-ca.github.io/images/gerry-decks/ ">Partie 1 - session matinale</a> (PowerPoint, 18.5 MB)<br>
-<a href="https://canada-ca.github.io/images/gerry-decks/ ">Partie 2 - session matinale</a> (PowerPoint, 1.99 MB)<br>
-<a href="https://canada-ca.github.io/images/gerry-decks/ ">Partie 3 - session de l<après-midi</a> (PowerPoint, 16.4 MB)<br>
-<a href="https://canada-ca.github.io/images/gerry-decks/ ">Sondage des participants - résultats</a> (PowerPoint, 525 KB)<br>
+<a href="https://canada-ca.github.io/images/gerry-decks/13 fev Partie 1 Canada 2018 Gerry McGovern-FR.pptx">Partie 1 - session matinale</a> (PowerPoint, 15 MB)<br>
+<a href="https://canada-ca.github.io/images/gerry-decks/13 fev Partie 2 Canada 2018 Gerry McGovern-FR.pptx">Partie 2 - session matinale</a> (PowerPoint, 3.18 MB)<br>
+<a href="https://canada-ca.github.io/images/gerry-decks/13 fev Partie 3 Canada 2018 Gerry McGovern-FR.pptx">Partie 3 - session de l'après-midi</a> (PowerPoint, 16.3 MB)<br>
+<a href="https://canada-ca.github.io/images/gerry-decks/13 fev Sondage Canada 2018 Gerry McGovern-FR.pptx">Sondage des participants - résultats</a> (PowerPoint, 568 KB)<br>
 <br>
 Bonne lecture!<br>
