--- a/images/gerry-decks/text.html
+++ b/images/gerry-decks/text.html
@@ -13,7 +13,7 @@ Presentation materials - English<br>
 <br>
 Enjoy!<br>
 <br>
-Diapositives de l<exposé - Français<br>
+Diapositives de l'exposé - Français<br>
 <br>
 <a href="https://canada-ca.github.io/images/gerry-decks/13 fev Partie 1 Canada 2018 Gerry McGovern-FR.pptx">Partie 1 - session matinale</a> (PowerPoint, 15 MB)<br>
 <a href="https://canada-ca.github.io/images/gerry-decks/13 fev Partie 2 Canada 2018 Gerry McGovern-FR.pptx">Partie 2 - session matinale</a> (PowerPoint, 3.18 MB)<br>
