--- a/pages/inscrire.html
+++ b/pages/inscrire.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]-->
-<!--[if gt IE 8]><!--><html class="no-js" lang="en" dir="ltr"><!--<![endif]-->
+<!--[if lt IE 9]><html class="no-js lt-ie9" lang="fr" dir="ltr"><![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js" lang="fr" dir="ltr"><!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
@@ -36,13 +36,13 @@
 			var defTop = document.getElementById("def-top");
 			defTop.outerHTML = wet.builder.top({
 				lngLinks: [{
-					lang: "fr",
-					href: "inscrire.html",
+					lang: "en",
+					href: "signup.html",
 					text: "Français"
 				}],
 				breadcrumbs: [{
 					title: "Home",
-					href: "https://www.canada.ca/en.html"
+					href: "https://www.canada.ca/fr.html"
 				},{
 					title: "About Canada.ca",
 					href: "https://www.canada.ca/en/government/about.html"
@@ -65,7 +65,7 @@
 <main role="main" property="mainContentOfPage" class="container">
 
 
-<h1>Sign up</h1>
+<h1>Lorem impsum</h1>
 
 	<p>Lorem impsum.</p>
 	
@@ -82,10 +82,10 @@
 <div id="mc_embed_signup">
 <form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=c6bb0b9f64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<h2>Subscribe to our mailing list</h2>
+	<h2>Lorem impsum</h2>
 <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 <div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+	<label for="mce-EMAIL">Votre courriel  <span class="asterisk">*</span>
 </label>
 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
 </div>
@@ -112,7 +112,7 @@
 <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
 	defPreFooter.outerHTML = wet.builder.preFooter({
-		dateModified: "April 4, 2018",
+		dateModified: "le 4 avril 2018",
 		showPostContent: true,
 		showFeedback: true,
 		showShare: true
