--- a/pages/inscrire.html
+++ b/pages/inscrire.html
@@ -38,14 +38,15 @@
 				lngLinks: [{
 					lang: "en",
 					href: "signup.html",
-					text: "Français"
+					text: "English"
 				}],
 				breadcrumbs: [{
-					title: "Home",
+					title: "Accueil",
 					href: "https://www.canada.ca/fr.html"
 				},{
-					title: "About Canada.ca",
-					href: "https://www.canada.ca/en/government/about.html"
+					title: "Au sujet de Canada.ca",
+					href: "https://www.canada.ca/fr/gouvernement/a-propos.html"
+				}],
 				}],
 				search: true,
 				siteMenu: true,
