--- a/draft.html
+++ b/draft.html
@@ -10,7 +10,7 @@ lang: en
   <h1 class="page-heading">Newest articles</h1>
 
 	   <div class="wb-eqht"> 
-  {% assign draft=site.drafts | where:"lang", page.lang %}
+<!--  {% assign draft=site.drafts | where:"lang", page.lang %} -->
     {% for draft in site.drafts %}
 <section class="col-md-6">
 
