--- a/pages/signup-design.html
+++ b/pages/signup-design.html
@@ -65,9 +65,9 @@
 <main role="main" property="mainContentOfPage" class="container">
 
 
-<h1>Sign up</h1>
+	<h1>Subscribe to our mailing list!</h1>
 
-	<p>Lorem impsum.</p>
+	<p>Something about the DTO, placeholder text stuff</p>
 	
 <div class="col-md-8">	
 
@@ -76,18 +76,16 @@
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+
 </style>
 <div id="mc_embed_signup">
 <form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=c6bb0b9f64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<h2>Subscribe to our mailing list!</h2>
 
 <div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address 
+	<label class="wb-inv" for="mce-EMAIL">Email Address 
 </label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email Address">
 </div>
 	<div id="mce-responses" class="clear">
 		<div class="response" id="mce-error-response" style="display:none"></div>
