--- a/pages/signup-design.html
+++ b/pages/signup-design.html
@@ -76,6 +76,29 @@
 <style type="text/css">
 	#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
 
+.hp {
+
+text-align: left;
+color: white;
+background-color: #335075;
+
+}
+
+ a.hp:visited {
+
+color: white !important;
+background-color: #335075;
+
+}
+
+ a.hp:hover {
+
+color: white !important;
+background-color: #284162;
+
+}
+	
+
 </style>
 <div id="mc_embed_signup">
 <form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=c6bb0b9f64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -91,7 +114,7 @@
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5700d338d6ab413ebca1099f4_c6bb0b9f64" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button hp"></div>
     </div>
 </form>
 </div>
