--- a/pages/signup-design.html
+++ b/pages/signup-design.html
@@ -78,23 +78,23 @@
 
 .hp {
 
-text-align: left;
-color: white;
-background-color: #335075;
+text-align: left !important;
+color: white !important;
+background-color: #335075 !important;
 
 }
 
  a.hp:visited {
 
 color: white !important;
-background-color: #335075;
+background-color: #335075 !important;
 
 }
 
  a.hp:hover {
 
 color: white !important;
-background-color: #284162;
+background-color: #284162 !important;
 
 }
 	
