--- a/pages/signup-design.html
+++ b/pages/signup-design.html
@@ -98,9 +98,14 @@ background-color: #284162 !important;
 
 }
 	
+.marginc {
+
+margin-left: 0;
+
+}
 
 </style>
-<div id="mc_embed_signup">
+<div id="mc_embed_signup marginc">
 <form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=c6bb0b9f64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
 
