--- a/pages/signup-design.html
+++ b/pages/signup-design.html
@@ -105,11 +105,11 @@ margin-left: 0;
 }
 
 </style>
-<div id="mc_embed_signup marginc">
+<div id="mc_embed_signup">
 <form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=c6bb0b9f64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
 
-<div class="mc-field-group">
+<div class="mc-field-group marginc">
 	<label class="wb-inv" for="mce-EMAIL">Email Address 
 </label>
 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email Address">
