--- a/pages/inscrire.html
+++ b/pages/inscrire.html
@@ -65,7 +65,7 @@
 <main role="main" property="mainContentOfPage" class="container">
 
 
-<h1>Lorem impsum</h1>
+<h1>Abonnez-vous à notre liste d’envoi!</h1>
 
 	<p>Lorem impsum.</p>
 	
@@ -76,11 +76,38 @@
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+
+	.hp {
+
+text-align: left !important;
+color: white !important;
+background-color: #335075 !important;
+
+}
+
+ a.hp:visited {
+
+color: white !important;
+background-color: #335075 !important;
+
+}
+
+ a.hp:hover {
+
+color: white !important;
+background-color: #284162 !important;
+
+}
+	
+.paddingc {
+
+padding-left: 0 !important;
+
+}
+
 </style>
 <div id="mc_embed_signup">
-<form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=9d5271b4ca" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+<form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=9d5271b4ca" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate paddingc" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
 	<h2>Abonnez-vous à notre liste d’envoi!</h2>
 <div class="mc-field-group">
