--- a/pages/signup.html
+++ b/pages/signup.html
@@ -61,13 +61,12 @@
 
 
 
-
 <main role="main" property="mainContentOfPage" class="container">
 
 
-<h1>Sign up</h1>
+	<h1>Subscribe to our mailing list!</h1>
 
-	<p>Lorem impsum.</p>
+	<p>Something about the DTO, placeholder text stuff</p>
 	
 <div class="col-md-8">	
 
@@ -75,26 +74,52 @@
 	<!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+	#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
+
+.hp {
+
+text-align: left !important;
+color: white !important;
+background-color: #335075 !important;
+
+}
+
+ a.hp:visited {
+
+color: white !important;
+background-color: #335075 !important;
+
+}
+
+ a.hp:hover {
+
+color: white !important;
+background-color: #284162 !important;
+
+}
+	
+.paddingc {
+
+padding-left: 0 !important;
+
+}
+
 </style>
 <div id="mc_embed_signup">
-<form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=c6bb0b9f64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+<form action="https://github.us12.list-manage.com/subscribe/post?u=5700d338d6ab413ebca1099f4&amp;id=c6bb0b9f64" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate paddingc" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<h2>Subscribe to our mailing list!</h2>
 
 <div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address 
+	<label class="wb-inv" for="mce-EMAIL">Email Address 
 </label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email Address">
 </div>
 	<div id="mce-responses" class="clear">
 		<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5700d338d6ab413ebca1099f4_c6bb0b9f64" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button hp"></div>
     </div>
 </form>
 </div>
